--- a/css/styles.css
+++ b/css/styles.css
@@ -1,144 +1,650 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video
+{
+	border:0;
+	font:inherit;
+	font-size:100%;
+	margin:0;
+	padding:0;
+	vertical-align:baseline;
 }
 
-
-/* HTML5 display-role reset for older browsers */
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-    display: block;
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section
+{
+	display:block;
 }
 
-body {
-    line-height: 1;
+body
+{
+	background-color:#EFDAC9;
+	font-family:'Open Sans', sans-serif;
+	line-height:20px;
+	padding-bottom:4em;
 }
 
-ol, ul {
-    list-style: none;
+ol,ul
+{
+	list-style:none;
 }
 
-blockquote, q {
-    quotes: none;
+blockquote,q
+{
+	quotes:none;
 }
 
-blockquote:before, blockquote:after, q:before, q:after {
-    content: '';
-    content: none;
+blockquote:before,blockquote:after,q:before,q:after
+{
+	content:none;
 }
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-header {
-    background-color: #FFFFFF;
-    box-shadow: 0px 0px 11px 7px rgba(0, 0, 0, 0.12);
-    height: 3.25em;
-    opacity: 0.98;
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-}
-
-body {
-    background-color: #EFDAC9;
-    font-family: 'Open Sans', sans-serif;
-    line-height: 20px;
-}
-
-figure {
-    position: relative;
-    top: 3.25em;
-    background: url(/img/mountain_mobile2.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 6em;
-    width: 100%;
-}
-
-figure h1 {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    font-size: 2em;
-    color: white;
+table
+{
+	border-collapse:collapse;
+	border-spacing:0;
 }
 
 body section {
-    position: relative;
-    top: 1.2em;
+position:relative;
+top:.8em;
 }
 
-section ul li section {
-    display: flex;
-    background-color: white;
-    position: relative;
-    top: 2em;
-    margin: 1.3em 0.4em 1em 0.4em;
-    flex-flow: column;
-    padding: 1em;
-    flex-wrap: wrap;
-    border-radius: .5em;
+img[src*="/img/logotransavia.svg"] {
+filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
+margin:.1em 0 0 .5em;
+position:absolute;
+width:3em;
+cursor: pointer;
 }
 
-section ul li section p {
-    font-size: 1em;
-    padding: 1em;
-    padding-left: 1.6em;
-}
-
-section ul li section h2 {
-    font-size: 1.5em;
-    padding: 1em;
+img[src*="/img/aanmeld2.svg"] {
+filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
+margin:.1em 0 0 .5em;
+position:absolute;
+right:.7em;
+top:0;
+width:3em;
+cursor: pointer;
 }
 
 body>section:first-of-type {
-    background-color: #00D868;
-    position: relative;
-    top: 3.2em;
-    height: 6em;
-    margin: auto;
+background-color:#00D868;
+height:3em;
+margin:auto;
+position:relative;
+top:3.2em;
+z-index:998;
+/*display: flex;
+justify-content:flex-end;
+align-items: center;*/
 }
 
-select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
-    font-size: 16px;
-}
-
-body>header>img:first-of-type {
-    width: 3em;
-    margin: .1em 0em 0em .5em;
+body>section>span:first-of-type {
+font-size: 3rem;
+margin-right: 1.1rem;
+color:#FFFFFF;
+cursor:pointer;
 position: absolute;
+right: .20em;
+bottom: 30%;
 }
 
-nav ul li {
-  display: inline-block;
-  margin:0 auto;
-  padding-left: 1em;
+body>section>h4:first-of-type{
+	text-align: center;
+	padding-top: .7em;
+padding-right: 2.2em;
+}
+
+.filter {
+	background-color: #00D868;
+	position: relative;
+	top: .7em;
+	/*text-align: center;*/
+	display: none;
+	font-size: 1em;
+	width: 100%;
+	padding-bottom: 1em;
+}
+
+.geen-display {
+	display: block;
+}
+
+/*.filter>h5 {
+	display: block;
+text-align: center;
+padding-bottom: .2rem;
+}*/
+
+body section ul li section img {
+	width: 2em;
+	position: absolute;
+	bottom: .1em;
+	left: .2em;
+	cursor: pointer;
+	filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
+}
+
+body>section>h4 {
+margin: 0 auto;
+display: block;
+padding-left: 2em;
+font-size: 1.4em;
+color: #FFFFFF;
+}
+
+figure {
+background:url(/img/mountain_mobile2.svg);
+background-position:bottom;
+background-repeat:no-repeat;
+background-size:cover;
+height:6em;
+position:relative;
+top:3.25em;
+width:100%;
+}
+
+figure h1 {
+color:#FFF;
+font-size:2em;
+left:50%;
+margin:0 -50% 0 0;
+position:absolute;
+top:50%;
+transform:translate(-50%,-50%);
+filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
+}
+
+header {
+background-color:#FFF;
+border-radius:.1em;
+box-shadow:0 0 11px 7px rgba(0,0,0,0.12);
+height:3.25em;
+opacity:0.98;
+position:fixed;
+width:100%;
+z-index:1000;
 }
 
 nav {
-  margin-top: 1em;
-  margin-right: 2em;
-  text-align: center;
+margin-right:1.5em;
+margin-top:1em;
+text-align:center;
+}
+
+nav ul li {
+display:inline-block;
+margin:0 auto;
+padding-left:5em;
+float: left;
+}
+
+nav ul li a {
+color:#00D868;
+font-size:1.3em;
+text-decoration:none;
+}
+
+nav ul li a:hover {
+text-decoration:underline;
+}
+
+section ul li section {
+background-color:#FFF;
+border-radius:.5em;
+display:flex;
+filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
+flex-flow:column;
+flex-wrap:wrap;
+margin:1em 1em .0em;
+overflow:hidden;
+padding:1em;
+top: 2.5em;
+}
+
+section ul li section button {
+/*background-color:#4286f4;*/
+background-color:#2800a0;
+border:none;
+border-radius:2em;
+bottom:0;
+display:block;
+height:2rem;
+margin:.1em;
+position:absolute;
+right:0;
+text-decoration:none;
+width:6rem;
+padding:0em;
+cursor: pointer;
+}
+
+body section ul li section button a {
+display: block;
+height: 100%;
+line-height:2.5em;
+	color: #FFFFFF;
+	text-decoration: none;
+cursor: pointer;
+}
+
+section ul li section h2 {
+display:block;
+font-size:1.5em;
+line-height:1em;
+margin:0 auto;
+padding-left:1em;
+width:100%;
+}
+
+section ul li section p {
+display:block;
+font-size:1em;
+margin:0 auto;
+padding:1em 1em 1em 1.6em;
+}
+
+select,textarea,input[type=text],input[type=password],input[type=datetime],input[type=datetime-local],input[type=date],input[type=month],input[type=time],input[type=week],input[type=number],input[type=email],input[type=url],input[type=search],input[type=tel],input[type=color] {
+font-size:16px;
+}
+
+body > footer {
+	z-index: 1000;
+	background-color: white;
+	position: relative;
+	bottom: -5em;
+	width: 100%;
+	display: block;
+}
+
+body > footer > p {
+margin: 0 auto;
+text-align: center;
+}
+
+/*
+progress:not([value]){
+width: 100%;
+margin: 0 auto;
+background-color: green;
+position: relative;
+padding-top: 1em;
+top: .7em;
+}*/
+
+
+body section ul li section span {
+	font-size: 2em;
+	position: absolute;
+	right: .6em;
+	top: .5em;
+	cursor: pointer;
+
+}
+
+main {
+background-image: url(/img/mountain_mobile2.svg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: bottom;
+height: 14em;
+padding-top: 10em;
+padding-bottom: 5em;
+filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
+}
+
+.form > button {
+	background-color:#2800a0;
+	border:none;
+	border-radius:2em;
+	text-decoration: none;
+position: relative;
+height: 2em;
+top:1em;
+width: 8rem;
+}
+
+.form > button > a {
+	text-decoration: none;
+	color: white;
+}
+
+.form {
+	text-align: center;
+	padding-top: 5em;
+	width: 100%;
+	margin: 0 auto;
+	padding-top:3em;
+	padding-bottom: 2em;
+	border-radius: .8em;
+	filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.4));
+}
+
+.form input{
+	margin: 0 auto !important;
+	display: block;
+
+}
+input[type=text]:valid,
+input[type=url]:valid,
+input[type=tel]:valid,
+input[type=number]:valid,
+input[type=email]:valid,input[type=color]:valid, input[type=password]:valid
+ {
+	border: solid 2px green;
+}
+
+legend {
+	font-size: 1.5em;
+	padding-bottom: 1em;
+}
+
+.form > fieldset > label {
+color: black;
+}
+
+.form {
+background-color: white;
+width:20em;
+
+}
+
+body main form fieldset p {
+	padding-top: 1em;
+}
+
+@media (min-width:0em) {
+body>aside {
+height:0;
+opacity: 0;
+}
+
+body section ul li label span {
+	padding-left: 2em;
+    display: inline-block;
+    min-width: 5em;
+		color: white;
+}
+
+nav ul li a {
+  font-size: 1em;
+  transition: font-size .5s;
+}
+
+section ul li section {
+-moz-transform:translateZ(0);
+-ms-transform:translateZ(0);
+-o-transform:translateZ(0);
+-webkit-transform:translateZ(0);
+margin-top: 1.2em;
+padding:2em;
+transform:translateZ(0);
+transition:all .5s ease;
+}
+
+section ul li section h2 {
+width:100% left-right: 2em;
+}
+
+section ul li section p {
+margin:0 auto;
+}
 }
 
 
-@media (min-width:23.4375em) {
-    body aside {
-        display: none;
-    }
+@media
+(min-width:41.75em) {
+body>aside {
+-moz-transform:translateZ(0);
+-ms-transform:translateZ(0);
+-o-transform:translateZ(0);
+-webkit-transform:translateZ(0);
+background-color:#00D868;
+display:inline-block;
+filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.1));
+height:100vh;
+opacity:0;
+position:fixed;
+top:3.25em;
+transform:translateZ(0);
+transition:opacity .8s;
+width:0;
+z-index:2000;
+}
+
+body form aside h3 {
+    text-align: left;
+    font-size: 2em;
+    font-weight: bold;
+    color: black;
+    margin: 1.2em 1em 1em 0em;
+    color: white;
+    /*z-index: 1;*/
+}
+
+h3, label {
+    /*padding-left:1em;*/
+		color: white;
+}
+
+body form aside {
+	padding-left: 1em;
+	padding-bottom: 1em;
+	border-bottom: solid 1px white;
+}
+
+body>aside form {
+	opacity: 0;
+	transition: opacity .3s;
+}
+
+body>section:first-of-type {
+-moz-transform:translateZ(0);
+-ms-transform:translateZ(0);
+-o-transform:translateZ(0);
+-webkit-transform:translateZ(0);
+opacity:100;
+transform:translateZ(0);
+transition:all .3s;
+}
+
+nav ul li a {
+  margin: 0 auto;
+  float: left;
+  position: relative;
+  left: 0;
+  font-size: 1.3em;
+}
+
+p {
+max-width:40em;
+}
+
+section ul li section {
+margin:1.2em 2.4em 0 2.7em;
+padding:2em;
+opacity: .95;
+}
+
+section ul li section h2 {
+display:block;
+font-size:1.5em;
+line-height:1em;
+margin:0 auto;
+padding:1em;
+width:26.5em;
+}
+
+section ul li section p {
+margin:0 auto;
+}
+}
+
+@media (min-width:64.06em) {
+	body {
+	padding-bottom:5em;
+	}
+
+	body>aside form {
+		opacity: 1;
+	}
+
+	body > section {
+	margin:0 auto;
+	max-width:80em;
+	padding-left:12.9em;
+	}
+
+	body>aside {
+	opacity:100;
+	width:12.9em;
+	}
+
+	body > figure {
+		background-size: cover;
+		background-position: 37% 0;
+
+position: absolute;
+	  top:0em;
+	height: 24.5em;
+	}
+
+	body > figure >h1 {
+		margin-left: 1.2em;
+		font-size: 4em;
+	}
+
+	body>section:first-of-type {
+	height:0;
+	opacity:0;
+	padding: 0;
+	}
+
+	section ul {
+	display:flex;
+	flex-grow:0;
+	flex-wrap:wrap;
+	justify-content:flex-start;
+	margin:40px 60px;
+	max-width:100%;
+	padding-bottom: 13em;
+	}
+
+	section ul li {
+	display:flex;
+	flex-grow:1;
+	width:50%;
+	}
+
+	section ul li section {
+	background-color:#FFF;
+	border-radius:.5em;
+	display:flex;
+	filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
+	flex-direction:column;
+	flex-flow:column;
+	flex-wrap:wrap;
+	margin:1em .4em .0em;
+	padding:1em 1em 3em;
+	width:100%;
+	top: 15.5em;
+	}
+
+	section ul li section h2 {
+	/*width:100%;*/
+/*width: 89%;*/
+	}
+
+	section ul li section p {
+	margin:0 auto;
+	}
+
+	section ul li:nth-child(-n+2) {
+	width:50%;
+	}
+
+body form aside h3 {
+    text-align: left;
+    font-size: 2em;
+    font-weight: bold;
+    color: black;
+    margin: 1.2em 1em 1em 0em;
+    color: white;
+    /*z-index: 1;*/
+}
+
+h3, label {
+    /*padding-left:1em;*/
+		color: white;
+}
+
+body form aside {
+	padding-left: 1em;
+}
+
+span {
+    display: inline-block;
+    min-width: 6em;
+}
+body section ul li section span {
+	font-size: 2em;
+	position: absolute;
+	right: .2em;
+	top: .5em;
+	min-width: 1em;
+}
+
+}
+
+@media (min-width:74.06em) {
+
+	section ul li {
+	display:flex;
+	flex-grow:1;
+	width:33.33%;
+	}
+
+}
+
+div img {
+  text-align: center;
+  height: 100%;
+  width: 100%;
+	padding-top: 3em;
+margin-bottom: -14em;
+background-color: white;
+}
+
+@media only screen and (min-width: 0em) {
+.article img:nth-child(1) {
+display: block;
+}
+.article img:nth-child(3) {
+display: none;
+}
+.article img:nth-child(2) {
+display: none;
+}
+}
+
+@media only screen and (min-width: 40em) {
+	.article img:nth-child(1) {
+	display: none;
+	}
+	.article img:nth-child(3) {
+	display: none;
+	}
+.article img:nth-child(2) {
+display: block;
+padding-bottom: 2em;
+}
+}
+@media only screen and (min-width: 60em) {
+	.article img:nth-child(1) {
+	display: none;
+	}
+	.article img:nth-child(3) {
+	display: block;
+	}
+.article img:nth-child(2) {
+display: none;
+}
 }
