--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,27 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section
 body
 {
 	background-color:#EFDAC9;
+	/*background-color: rgba(239, 218, 201);*/
 	font-family:'Open Sans', sans-serif;
 	line-height:20px;
 	/*padding-bottom:4em;*/
+	transition: background-position 1s ease;
+}
+
+body.paranoia {
+	background-color:#EFDAC9;
+	background: url(/img/tafel.png) 0;
+}
+
+body.doof {
+	background-color:#EFDAC9;
+	background: url(/img/eenzaam.png) 0;
+}
+
+body.dialoog {
+	background-color:#EFDAC9;
+	background: url(/img/dialoog.jpg) 0;
+	background-size: cover;
 }
 
 ol,ul
@@ -51,17 +69,18 @@ img[src*="/img/logotransavia.svg"] {
 filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
 margin:.1em 0 0 .5em;
 position:absolute;
-width:3em;
+width:2.4rem;
+top: .3em;
+left: .5em;
 cursor: pointer;
 }
 
 img[src*="/img/aanmeld2.svg"] {
-filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
 margin:.1em 0 0 .5em;
 position:absolute;
 right:.7em;
-top:0;
-width:3em;
+top:.3em;
+width:2.4rem;
 cursor: pointer;
 }
 
@@ -96,16 +115,27 @@ padding-right: 2.2em;
 .filter {
 	background-color: #00D868;
 	position: relative;
-	top: .7em;
-	/*text-align: center;*/
-	display: none;
+		/*text-align: center;*/
 	font-size: 1em;
 	width: 100%;
 	padding-bottom: 1em;
+	transition:all .5s ease;
+	opacity: 0;
+	z-index: 5;
+	visibility: hidden;
+top: 0;
+}
+
+figure {
+	z-index: 0;
 }
 
 .geen-display {
-	display: block;
+display: block;
+opacity: 100;
+visibility: visible;
+top: .7em;
+
 }
 
 /*.filter>h5 {
@@ -117,8 +147,8 @@ padding-bottom: .2rem;
 body section ul li section img {
 	width: 2em;
 	position: absolute;
-	bottom: .1em;
-	left: .2em;
+	bottom: .5em;
+	left: .5em;
 	cursor: pointer;
 	filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
 }
@@ -164,6 +194,10 @@ width:100%;
 z-index:1000;
 }
 
+/*header.doof {
+background: url("/img/eenzaam.png")
+}*/
+
 nav {
 margin-right:1.5em;
 margin-top:1em;
@@ -205,22 +239,27 @@ section ul li section button {
 background-color:#2800a0;
 border:none;
 border-radius:2em;
-bottom:0;
 display:block;
 height:2rem;
 margin:.1em;
 position:absolute;
-right:0;
+right:1em;
+bottom:.9em;
 text-decoration:none;
 width:6rem;
 padding:0em;
 cursor: pointer;
 }
 
+section ul li section button:hover {
+	background-color:#1400a0;
+
+}
+
 body section ul li section button a {
 display: block;
 height: 100%;
-line-height:2.5em;
+line-height:2.9em;
 	color: #FFFFFF;
 	text-decoration: none;
 cursor: pointer;
@@ -244,6 +283,7 @@ padding:1em 1em 1em 1.6em;
 
 select,textarea,input[type=text],input[type=password],input[type=datetime],input[type=datetime-local],input[type=date],input[type=month],input[type=time],input[type=week],input[type=number],input[type=email],input[type=url],input[type=search],input[type=tel],input[type=color] {
 font-size:14px;
+padding-left:.2em;
 }
 
 body > footer {
@@ -275,9 +315,8 @@ body section ul li section span {
 	font-size: 2em;
 	position: absolute;
 	right: .6em;
-	top: .5em;
+	top:.5em;
 	cursor: pointer;
-
 }
 
 main {
@@ -291,7 +330,7 @@ padding-bottom: 5em;
 filter:drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
 }
 
-.form > button {
+input[type=submit] {
 	background-color:#2800a0;
 	border:none;
 	border-radius:2em;
@@ -300,11 +339,8 @@ position: relative;
 height: 2em;
 top:1em;
 width: 8rem;
-}
-
-.form > button > a {
-	text-decoration: none;
-	color: white;
+color: white;
+-webkit-appearance: none;
 }
 
 .form {
@@ -348,7 +384,7 @@ width:20em;
 }
 
 body main form fieldset p {
-	padding-top: 1em;
+	padding-top: 1.5em;
 }
 
 .filter>h3 {
@@ -385,11 +421,41 @@ left: -4em;
 .label {
 	width: 2em;
 	position: absolute;
-	right: 5em;
-	top: 0em;
+	right: 6em;
+	top: -4em;
+	transition: all 1s;
+}
+
+.label.open {
+	top: 0em;;
 }
 
 
+.heart {
+
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 2em;
+  bottom: -4.5em;
+  transform: translate(-50%, -50%);
+  background: url(/img/heart.png) no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
+}
+.heart:hover {
+	animation: fave-heart 1s steps(28);
+  background-position: -2800px 0;
+  transition: background 1s steps(28);
+}
+@keyframes fave-heart {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -2800px 0;
+  }
+}
 
 @media (min-width:0em) {
 body>aside {
@@ -427,7 +493,6 @@ width:100% left-right: 2em;
 section ul li section p {
 margin:0 auto;
 }
-}
 
 
 @media
@@ -445,12 +510,12 @@ opacity:0;
 position:fixed;
 top:3.25em;
 transform:translateZ(0);
-transition:opacity .8s;
-width:0;
+transition:all .5s;
 z-index:2000;
+visibility: hidden;
 }
 
-body form aside h3 {
+body form fieldset h3 {
     text-align: left;
     font-size: 2em;
     font-weight: bold;
@@ -465,7 +530,7 @@ h3, label {
 		color: white;
 }
 
-body form aside {
+body form fieldset {
 	padding-left: 1em;
 	padding-bottom: 1em;
 	border-bottom: solid 1px white;
@@ -473,7 +538,7 @@ body form aside {
 
 body>aside form {
 	opacity: 0;
-	transition: opacity .3s;
+	transition: all .9s;
 }
 
 body>section:first-of-type {
@@ -523,8 +588,13 @@ margin:0 auto;
 	/*padding-bottom:5em;*/
 	}
 
+body>aside {
+	visibility: visible;
+}
+
 	body>aside form {
 		opacity: 1;
+		visibility: visible;
 	}
 
 	body > section {
